--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,3 @@
 packages:
-  - package: fivetran/quickbooks_source
-    version: [">=0.12.0", "<0.13.0"]
+  - git: "https://github.com/kk-shetty-hevo/dbt_quickbooks_source.git"
+    revision: main
