--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -5,6 +5,8 @@ version: '0.17.1'
 
 require-dbt-version: [">=1.3.0", "<2.0.0"]
 
+profile: quickbooks
+
 models:
   quickbooks:
     +materialized: table
@@ -59,20 +61,20 @@ vars:
     financial_statement_ordinal: []
     cash_flow_statement_type_ordinal: []
 
-    using_address: true
+    using_address: false
     using_bill: true
-    using_credit_memo: true
-    using_department: true
-    using_deposit: true
-    using_estimate: true
-    using_invoice: true
-    using_invoice_bundle: true
-    using_journal_entry: true
-    using_payment: true
-    using_refund_receipt: true
-    using_transfer: true
-    using_vendor_credit: true
-    using_sales_receipt: true
+    using_credit_memo: false
+    using_department: false
+    using_deposit: false
+    using_estimate: false
+    using_invoice: false
+    using_invoice_bundle: false
+    using_journal_entry: false
+    using_payment: false
+    using_refund_receipt: false
+    using_transfer: false
+    using_vendor_credit: false
+    using_sales_receipt: false
     using_credit_card_payment_txn: false
 
 analysis-paths: ["analysis"]
